[package]
name = "pallet-creditcoin"
version = "2.211.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = 'FRAME pallet template for defining custom runtime logic.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
homepage = 'https://creditcoin.org'
license = 'Unlicense'
publish = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
itertools = { version = "~0.10", default-features = false }
hex-literal = "*"
log = "0.4.17"
extend = "1.1.2"
ethabi = { version = "16.0.0", features = ["rlp"], default-features = false }
ethereum-types = { version = "0.12.1", features = [
    "rlp",
    "serialize",
], default-features = false }
serde = { version = "1.0.147", features = ["derive"], default-features = false }
serde_json = { version = "1.0.89", features = [
    "alloc",
], default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
lexical = { version = "6.1.1", features = [
    "write-integers",
], default-features = false }
sha2 = { version = "0.10.6", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = [
    "hmac",
    "static-context",
] }
base58 = "0.2.0"
bitcoin-bech32 = { version = "0.12.1", git = "https://github.com/nathanwhit/rust-bech32-bitcoin", default-features = false, branch = "no-std" }
strum = { version = "0.24.1", features = ["derive"], default-features = false }

[dependencies.tracing]
package = "sp-tracing"
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/gluwa/substrate.git"
optional = true
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-support]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-system]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-std]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-core]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-io]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-balances]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies]
bstr = { version = "1.0.1", default-features = false }
parking_lot = "0.11.0"
tracing-test = { version = "0.2.1", git = "https://github.com/nathanwhit/tracing-test", branch = "main" }
assert_matches = "1.5.0"

[dev-dependencies.sp-keystore]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '0.10.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'sp-core/std',
    'serde/std',
    'serde_json/std',
    'hex/std',
]
try-runtime = ['frame-support/try-runtime']
