[package]
name = 'pallet-difficulty'
version = '2.211.2'
description = 'FRAME pallet for dynamic difficulty adjustment.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = "0.4.17"

[dependencies.primitives]
default-features = false
version = "2.211.2"
path = "../../primitives"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '2.3.1'

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/gluwa/substrate.git"
optional = true
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.sp-std]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-support]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.frame-system]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.1.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.tracing]
package = "sp-tracing"
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[dev-dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-arithmetic/std',
]
try-runtime = ['frame-support/try-runtime']
