[package]
name = "pallet-offchain-task-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true }
primitives = { workspace = true }
scale-info = { workspace = true }
serde = { version = "1.0.152", features = ["derive"], default-features = false }
serde_json = { version = "1.0.93", features = [
    "alloc",
], default-features = false }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
tracing = { workspace = true }
sp-std = { workspace = true }

[features]
default = ['std', 'mocked-task']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'frame-support/std',
    'frame-system/std',
    'serde/std',
    "pallet-timestamp/std",
    "frame-benchmarking/std",
    "primitives/std",
]
try-runtime = ["frame-support/try-runtime"]
mocked-task = ['std']

[dev-dependencies]
assert_matches = "1.5.0"
tracing-test = { version = "0.2.1", git = "https://github.com/nathanwhit/tracing-test", branch = "main" }
pallet-balances = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
runtime-utils = { workspace = true }
