[package]
name = 'pallet-pos-switch'
description = 'Pallet to support the switch to PoS.'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
pallet-difficulty = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-consensus-babe = { workspace = true }
pallet-im-online = { workspace = true }

[dev-dependencies]

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-std/std',
    'sp-core/std',
    'pallet-difficulty/std',
    'sp-consensus-grandpa/std',
    'sp-consensus-babe/std',
    'pallet-im-online/std',
]
try-runtime = ['frame-support/try-runtime']
