[package]
name = 'pallet-rewards'
version = '2.0.0-beta.5'
description = 'FRAME pallet for rewarding block authors.'
authors = ['Gluwa Inc.', 'Nathan Whitaker <nathan.whitaker@gluwa.com>']
edition = '2018'
license = 'Unlicense'
publish = false
repository = 'https://github.com/gluwa/creditcoin-substrate/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
optional = true
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.0.0-dev'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '1.0'

[dependencies.sp-consensus-pow]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '0.10.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.1.0-dev'


[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.1.0-dev'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.0.0-dev'

[dev-dependencies.sp-runtime]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.1.0-dev'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://github.com/gluwa/substrate.git'
rev = '57cab2f30bcc5343771c8bc763dd6c9c9e10f0a8'
version = '4.0.0-dev'

[dev-dependencies.log]
default-features = false
version = "0.4.15"

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-consensus-pow/std',
]
try-runtime = ['frame-support/try-runtime']
