[package]
name = 'pallet-staking'
description = "Gluwa's offchain worker staking based on substrate frame staking"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-election-provider-support = { workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-offchain-task-scheduler = { workspace = true }
pallet-session = { workspace = true }
pallet-staking-substrate = { workspace = true }
parity-scale-codec = { workspace = true }
serde.workspace = true
scale-info = { workspace = true }
sp-arithmetic.workspace = true
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-election-provider-support/runtime-benchmarks',
    'pallet-staking-substrate/runtime-benchmarks',
]
std = [
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-election-provider-support/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-offchain-task-scheduler/std',
    'pallet-session/std',
    'pallet-staking-substrate/std',
    'pallet-offchain-task-scheduler/std',
    'sp-std/std',
]
try-runtime = [
    'frame-support/try-runtime',
    'pallet-staking-substrate/try-runtime',
]
