[package]
name = 'pallet-task-voting'
description = 'FRAME pallet for voting on task execution results.'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-consensus-pow = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-staking.workspace = true
sp-staking.workspace = true
sp-arithmetic.workspace = true

[dev-dependencies]
pallet-balances = { features = ["std"], workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
tracing = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'parity-scale-codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-staking/std',
    'sp-consensus-pow/std',
    'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
