[package]
name = 'pallet-task-voting'
description = 'FRAME pallet for voting on task execution results.'

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-offchain-task-scheduler = { workspace = true }
parity-scale-codec = { workspace = true }
primitives = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
extend = "*"

[dev-dependencies]
runtime-utils = { workspace = true }

[features]
default = ['std']
std = [
    'frame-support/std',
    'frame-system/std',
    'sp-arithmetic/std',
    'sp-runtime/std',
    'pallet-offchain-task-scheduler/std',
    'primitives/std',
]
try-runtime = ['frame-support/try-runtime']
