[package]
name = "generate-bags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creditcoin-node-runtime = { path = "../" }
generate-bags = { workspace = true }
clap = { version = "4.4.10", features = ["derive"] }
