[package]
name = "test-client"

version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
creditcoin-node-runtime = { workspace = true }
sc-client-db = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sp-core = { features = ["std"], workspace = true }
sp-runtime = { features = ["std"], workspace = true }
substrate-test-client = { workspace = true }
