[package]
name = "test-runtime-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { workspace = true }
parking_lot = "0.12.2"
frame-system = { workspace = true }
sp-io.workspace = true
sp-keystore.workspace = true
sp-core.workspace = true
tracing.workspace = true
sp-arithmetic.workspace = true
sp-state-machine.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-keystore/std",
    "sp-io/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
    "sp-state-machine/std",
]
