[package]
name = "traced-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
tracing.workspace = true
