[package]
name = "creditcoin-runtime-api"
version = "2.211.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false }

[dependencies.sp-api]
git = "https://github.com/gluwa/substrate.git"
version = '4.0.0-dev'
rev = "973dd744f5f7c6322799bbfa29366588e0267b0a"
default-features = false

[features]
default = ["std"]
std = ["sp-api/std", "parity-scale-codec/std"]
